--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
- 
+
 <div ng-controller="MainCtrl">
   <div class="row marketing heading-group">
       <div class="col-md-4 col-sm-4">
@@ -50,11 +50,11 @@
       <div class="form-group col-md-4 col-sm-4" >
         <div class="check-group">
           <h4>Incentive Type</h4>
-           <label class="checkbox-inline">
-             <input type="checkbox" ng-true-value="'renewables'" data-ng-false-value='' ng-model="searchIncentives.incentiveType">  Renewables
+           <label class="radio-inline">
+             <input type="radio" ng-value="'renewables'"  ng-model="searchIncentives.incentiveType">  Renewables
            </label>
-           <label class="checkbox-inline">
-             <input type="checkbox" ng-true-value="'efficiency'" data-ng-false-value='' ng-model="searchIncentives.incentiveType"> 
+           <label class="radio-inline">
+             <input type="radio" ng-value="'efficiency'"  ng-model="searchIncentives.incentiveType"> 
              Efficiency
            </label>
         </div>
@@ -63,17 +63,17 @@
       <div class="form-group col-md-4 col-sm-4">
          <div class="check-group">
            <h4>Incentive Program</h4>
-            <label class="checkbox-inline">
-              <input type="checkbox" ng-true-value="'residential'" ng-false-value="''" ng-model="searchIncentives.incentiveProgram" > Residential
+            <label class="radio-inline">
+              <input type="radio" ng-value="'residential'" ng-model="searchIncentives.incentiveProgram" > Residential
             </label>
-            <label class="checkbox-inline" >
-              <input type="checkbox"  ng-true-value="'agriculture'" ng-false-value="''" ng-model="searchIncentives.incentiveProgram"> Agriculture
+            <label class="radio-inline" >
+              <input type="radio"  ng-value="'agriculture'" ng-model="searchIncentives.incentiveProgram"> Agriculture
             </label>
-            <label class="checkbox-inline">
-              <input type="checkbox"  ng-true-value="'commercial'" ng-false-value="''" ng-model="searchIncentives.incentiveProgram"> Commercial
+            <label class="radio-inline">
+              <input type="radio"  ng-value="'commercial'" ng-model="searchIncentives.incentiveProgram"> Commercial
             </label>
-            <label class="checkbox-inline">
-              <input type="checkbox"  ng-true-value="'financing'" ng-false-value="''" ng-model="searchIncentives.incentiveProgram"> Financing and Services
+            <label class="radio-inline">
+              <input type="radio"  ng-value="'financing'" ng-model="searchIncentives.incentiveProgram"> Financing and Services
             </label>
          </div>
       </div> 
@@ -81,31 +81,31 @@
          <div class="check-group">
            <h4>Category</h4>
 
-             <label class="checkbox-inline">
-               <input type="checkbox"  ng-true-value="'appliances'" data-ng-false-value='' ng-model="searchIncentives.incentiveCategory" /> Appliances 
+             <label class="radio-inline">
+               <input type="radio"  ng-value="'appliances'" ng-model="searchIncentives.incentiveCategory" /> Appliances 
              </label>
-             <label class="checkbox-inline">
-               <input type="checkbox" ng-true-value="'construction'" data-ng-false-value='' ng-model="searchIncentives.incentiveCategory" /> Construction
+             <label class="radio-inline">
+               <input type="radio" ng-value="'construction'"  ng-model="searchIncentives.incentiveCategory" /> Construction
              </label>
-             <label class="checkbox-inline">
-               <input type="checkbox"  ng-true-value="'electricity'" data-ng-false-value='' ng-model="searchIncentives.incentiveCategory" /> Electricity
+             <label class="radio-inline">
+               <input type="radio"  ng-value="'electricity'"  ng-model="searchIncentives.incentiveCategory" /> Electricity
              </label>
-             <label class="checkbox-inline">
-               <input type="checkbox" ng-true-value="'retrofit'" data-ng-false-value='' ng-model="searchIncentives.incentiveCategory" /> Retrofit
+             <label class="radio-inline">
+               <input type="radio" ng-value="'retrofit'" ng-model="searchIncentives.incentiveCategory" /> Retrofit
              </label>
-             <label class="checkbox-inline">
-               <input type="checkbox" ng-true-value="'loans'" data-ng-false-value='' ng-model="searchIncentives.incentiveCategory" /> Loans and Grants
+             <label class="radio-inline">
+               <input type="radio" ng-value="'loans'" ng-model="searchIncentives.incentiveCategory" /> Loans and Grants
              </label>
          </div>
 
       </div>
-      <!--
-      <a class="btn clear-button" href="" title="" ng-click="clearFilters">Clear Filters</a>
       
+      
+     
       <div class="button-div">
-        
+           <a class="btn btn-default clear-button" href="" title="" ng-click="clearFilters()">Clear Filters</a>
       </div>
-      -->
+     
     </div><!-- / .panel-body -->
   </div><!-- /.row .panel -->
 
