--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -36,10 +36,30 @@ html{
 body {
   padding: 0;
 }
-
+.container .jumbotron {
+    border-radius: 4px;
+  }
+.jumbotron {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.jumbotron p{
+  font-size: 1em;
+  margin-bottom: 0px;
+}
+.heading-text{
+  
+}
+.panel-body>p{
+   text-align: center;
+   
+   font-size: 1.75em;
+}
 form{
     margin: 0 auto;
-    padding-top: 20px;
+
 }
 .check-group{
   text-align: center;
@@ -54,13 +74,20 @@ form{
 .clear-button{
   background-color: #004B8E;
   color: #FFFFFF;
+  -webkit-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.27);
+  -moz-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.27);
+  box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.27);
 }
 .clear-button:hover, .clear-button:focus{
   text-decoration: none;
   color: #FFFFFF;
   background-color:#003c71 ;
 }
-
+caption{
+    color: #000;
+    text-align: center;
+    font-size: 1.25em;
+}
 .hidden-col{
   display: none;
 }
