added target _blank to program links

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -184,7 +184,7 @@
             <td class="hidden-col">{{col.eligibility}}</td>
 
           <!-- Visible and sortable data -->
-            <td><div class="data-cell prog-name-cell"><a href="{{col.contact}}" title="" alt="program link">{{col.programName}}</a></div></td>
+            <td><div class="data-cell prog-name-cell"><a href="{{col.contact}}" title="" alt="program link" target="_blank">{{col.programName}}</a></div></td>
             <td><div class="data-cell">{{col.incentiveCategory}}</div></td>
             <td><div class="data-cell">{{col.keyword}}</div></td>
             <td><div class="data-cell"><span class="text-back">{{col.participatingUtility}}</span></div></td>
