--- a/app/views/main.html
+++ b/app/views/main.html
@@ -50,7 +50,7 @@
         </div>
       </div>
   </div><!--/.row, .heading-group-->
-  </div>
+  </div><!-- /.jumbotron -->
 
 
 
@@ -131,6 +131,7 @@
 
 
   <div class="row marketing" >
+   <div class="table-container">
     <div class="table-responsive">
       <table class="table" >
         <caption>Available Incentives and Rebates:</caption>
@@ -194,6 +195,7 @@
          </tbody>
       </table>
     </div><!-- / .table-responsive -->
+    </div>
   </div><!-- /.row -->
 </div>
 
