--- a/app/views/glossary.html
+++ b/app/views/glossary.html
@@ -1,5 +1,16 @@
-<div>
-   <div class="row marketing">
+<div ng-controller="GlosCtrl">
+     <div class="jumbotron">
+
+            <div class="mini-head">
+              <a href="http://www.mass.gov/eea/grants-and-tech-assistance/guidance-technical-assistance/agencies-and-divisions/doer/" target="_blank"><img class="img-responsive logo" src="images/DOER_JPEG_300dpi.jpg" alt="DOER logo"></a>
+           
+              <div class="menu">
+                <a class="menu-link" href="#/">Home</a><span>&nbsp;|</span>
+                <a class="menu-link" ng-href="#/glossary">Glossary</a>
+              </div>
+            </div>
+    </div>
+    <div class="row marketing">
 	<h2>Fuel Source Term Glossary:</h2>
 	<h3>Below we have provided the definitions for fuel source terms commonly used to describe certain types of energy and their components.</h3>
 
