--- a/app/views/main.html
+++ b/app/views/main.html
@@ -144,13 +144,7 @@
                    <span ng-show="sortType == 'programName' && sortReverse" class="glyphicon glyphicon-triangle-top"></span>
                 </a>
              </th> 
-             <th>
-                <a href="" ng-click="sortType = 'incentiveCategory'; sortReverse = !sortReverse">
-                   Category
-                   <span ng-show="sortType == 'incentiveCategory' && !sortReverse" class="glyphicon glyphicon-triangle-bottom"></span>
-                   <span ng-show="sortType == 'incentiveCategory' && sortReverse" class="glyphicon glyphicon-triangle-top"></span>
-                </a>
-             </th>
+
              <th>
                 <a href="" ng-click="sortType = 'keyword'; sortReverse = !sortReverse">
                    Keyword
@@ -166,12 +160,21 @@
                 </a>
              </th>
              <th>
-                <a href="" ng-click="sortType = 'amount'; sortReverse = !sortReverse">
-                  Amount
-                  <span ng-show="sortType == 'amount' && !sortReverse" class="glyphicon glyphicon-triangle-bottom"></span>
-                  <span ng-show="sortType == 'amount' && sortReverse" class="glyphicon glyphicon-triangle-top"></span>
+                <a href="" ng-click="sortType = 'incentiveDetail'; sortReverse = !sortReverse">
+                  Detail
+                  <span ng-show="sortType == 'incentiveDetail' && !sortReverse" class="glyphicon glyphicon-triangle-bottom"></span>
+                  <span ng-show="sortType == 'incentiveDetail' && sortReverse" class="glyphicon glyphicon-triangle-top"></span>
                 </a>
              </th>
+
+             <th>
+                <a href="" ng-click="sortType = 'amount'; sortReverse = !sortReverse">
+                   Amount
+                   <span ng-show="sortType == 'amount' && !sortReverse" class="glyphicon glyphicon-triangle-bottom"></span>
+                   <span ng-show="sortType == 'amount' && sortReverse" class="glyphicon glyphicon-triangle-top"></span>
+                </a>
+             </th>
+
           </tr>
          </thead>
          <tbody>
@@ -181,14 +184,15 @@
             <td class="hidden-col"><div class="data-cell">{{col.incentiveType}}</div></td>
             <td class="hidden-col"><div class="data-cell">{{col.incentiveProgram}}</div></td>
             <td class="hidden-col"><div class="data-cell">{{col.fuelSource}}</div></td>
-            <td class="hidden-col">{{col.incentiveDetail}}</td>
+            <td class="hidden-col">{{col.incentiveCategory}}</td>
             <td class="hidden-col">{{col.eligibility}}</td>
 
           <!-- Visible and sortable data -->
             <td><div class="data-cell prog-name-cell"><a href="{{col.contact}}" title="" alt="program link" target="_blank">{{col.programName}}</a></div></td>
-            <td><div class="data-cell">{{col.incentiveCategory}}</div></td>
+            
             <td><div class="data-cell">{{col.keyword}}</div></td>
             <td><div class="data-cell"><span class="text-back">{{col.participatingUtility}}</span></div></td>
+            <td><div class="data-cell">{{col.incentiveDetail}}</div></td>
             <td><div class="data-cell">{{col.amount}}</div></td>
           </tr >
 
